Fixed disabled button being invisible but present

--- a/src/app/materials/material-item-details/material-item-details.component.scss
+++ b/src/app/materials/material-item-details/material-item-details.component.scss
@@ -11,6 +11,9 @@
 
     button {
       margin-left: 0.5rem;
+      &:disabled {
+        background-color: pink;
+      }
     }
   }
   .item-detail-header {
