--- a/src/app/materials/material-item/material-item.component.scss
+++ b/src/app/materials/material-item/material-item.component.scss
@@ -19,6 +19,9 @@
 
   button {
     margin-left: 0.5rem;
+    &:disabled {
+      background-color: pink;
+    }
   }
 
   input {
